--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@notarobot13/express-file-routing": "^2.0.5",
     "express": "^4.18.2",
+    "express-file-routing": "^2.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
